<resources>
    <string name="app_name">Just Java</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="toppings_header">Toppings</string>
    <string name="thank_you">Thank you!</string>
    <string name="name">Your name</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">Order</string>
    <string name="quantity">1</string>
</resources>
